<resources>
    <string name="app_name">IOTMobileApp</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="priv_descr">
        GDPR permits privacy rights to you as a subject which become responsibilities to us, as data controllers
        and processors. These are the right to information, right to access, right to be forgotten and right to portability.
    </string>
    <string name="right_info_title"> Right to be Informed</string>
    <string name="right_acc_title">Right to Access</string>
    <string name="right_forget_title">Right to be Forgotten</string>
    <string name="right_info_descr">The Right to be Informed, as dictated by article 13 and 14 of GDPR, is the obligation
    of a processor or controller to inform the subject as to what data of theirs is being collected, why it is being collected
    and how it will be used. This is usually enforced by means of a privacy policy.</string>
    <string name="right_acc_descr">The Right to Access is described in article 15. It\'s comprised of a number of responsibilities
        which are bequeathed to the controller. The primary form in which this manifests itself is the Subject Access Request. The SAR
    is a request made by the subject, which obligates the controller to aggregate all data of that subject, annotated with its
    purpose, category, retention policy, and the applicability of further rights on that data.</string>
    <string name="right_forget_descr">The Right to Erasure, or the Right to be forgotten is described in article 17.
        This right entitles the subject to remove, or sufficiently anonymize all data stored pertaining to them. This
        manifests itself in the form of an Erasure Request.
    </string>
    <string name="right_port_descr">The Right to Portability, as described in article 20, dictates that a subject has the right
    to access all data pertaining to them in a manner that is portable from one controller to another. This is similar an Access Request,
    but instead of a human readable form, it is in a machine readable form such as JSON or XML</string>
    <string name="why_mac_title">MAC Address</string>
    <string name="why_location_title">Location and Orientation</string>
    <string name="why_model_title">Device Model and Manufacturer</string>
    <string name="why_mac_expl">We store the MAC address of your Bluetooth and Wifi NIC in order to authenticate the device. </string>
    <string name="why_location_expl">We use GPS (Fine) and Network (Coarse) Location Services in order to keep trackof each user.
    This is used when building spatial relationships.</string>
    <string name="why_model_expl"></string>
    <string name="privacy_policy_body">
Isaac Walker built the IOT Scanner app as a Free app. This SERVICE is provided by Isaac Walker at no cost and is intended for use as is.
\n\n
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
\n
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
\n\n
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at IOT Scanner unless otherwise defined in this Privacy Policy.
\n
Information Collection and Use
\n\n
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to MAC Address, Location, Device Model, Time. The information that I request will be retained on your device and is not collected by me in any way.
\n
The app does use third party services that may collect information used to identify you.
\n
Link to privacy policy of third party service providers used by the app
\n
Google Play Services
Log Data
\n
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies
\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
\n
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers
\n\n
I may employ third-party companies and individuals due to the following reasons:
\n\n
To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n
Security
\n\n
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
\n\n
Links to Other Sites
\n
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n
Children’s Privacy
\n
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
\n
Changes to This Privacy Policy
\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
\n\n
Contact Us
\n\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at walkeri@tcd.ie.

This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
</resources>