<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gdpr.PolicyActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="293dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/why_mac_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/why_mac_title" />

            <TextView
                android:id="@+id/why_mac_expl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/why_mac_expl" />

            <TextView
                android:id="@+id/why_location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/why_location_title" />

            <TextView
                android:id="@+id/why_location_expl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/why_location_expl" />

            <TextView
                android:id="@+id/why_model_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/why_model_title" />

            <TextView
                android:id="@+id/why_model_expl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/why_model_expl" />

            <TextView
                android:id="@+id/privacy_policy__title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/why_model_title" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/privacy_policy_body" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>