<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gdpr.PrivacyActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/priv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/priv_descr" />

            <TextView
                android:id="@+id/right_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/right_info_title" />

            <TextView
                android:id="@+id/right_info_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/right_info_descr" />

            <Button
                android:id="@+id/privPolicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Privacy Policy" />

            <TextView
                android:id="@+id/right_acc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/right_acc_title" />

            <TextView
                android:id="@+id/right_acc_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/right_acc_descr" />

            <Button
                android:id="@+id/accessRequestBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Access Request" />

            <TextView
                android:id="@+id/right_forget_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/right_forget_title" />

            <TextView
                android:id="@+id/right_forget_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/right_forget_descr" />

            <Button
                android:id="@+id/erasureRequestBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/holo_red_light"
                android:text="Erasure Request" />

            <TextView
                android:id="@+id/right_port_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/right_forget_title" />

            <TextView
                android:id="@+id/right_port_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="false"
                android:text="@string/right_port_descr" />

            <Button
                android:id="@+id/portRequestBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Export Request" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>